@@ -3596,7 +3596,21 @@ avt_get_key (wchar_t * ch)
 	  avt_analyze_event (&event);
 
 	  if (event.type == SDL_KEYDOWN)
-	    *ch = (wchar_t) event.key.keysym.unicode;
+	    if (event.key.keysym.unicode)
+	      *ch = (wchar_t) event.key.keysym.unicode;
+	    else
+	      switch (event.key.keysym.sym)
+	        {
+	        case SDLK_UP: *ch = (wchar_t) AVT_KEY_UP; break;
+	        case SDLK_DOWN: *ch = (wchar_t) AVT_KEY_DOWN; break;
+	        case SDLK_RIGHT: *ch = (wchar_t) AVT_KEY_RIGHT; break;
+	        case SDLK_LEFT: *ch = (wchar_t) AVT_KEY_LEFT; break;
+	        case SDLK_INSERT: *ch = (wchar_t) AVT_KEY_INSERT; break;
+	        case SDLK_HOME: *ch = (wchar_t) AVT_KEY_HOME; break;
+	        case SDLK_END: *ch = (wchar_t) AVT_KEY_END; break;
+	        case SDLK_PAGEUP: *ch = (wchar_t) AVT_KEY_PAGEUP; break;
+	        case SDLK_PAGEDOWN: *ch = (wchar_t) AVT_KEY_PAGEDOWN; break;
+                }
 	}
     }
 
@@ -4249,7 +4263,7 @@ avt_ask (wchar_t * s, const int size)
     maxlen = size / sizeof (wchar_t);
 
   len = 0;
-  s[len] = L'\0';
+  SDL_memset(s, 0, size);
   ch = L'\0';
 
   do
@@ -4257,17 +4271,20 @@ avt_ask (wchar_t * s, const int size)
       /* show cursor */
       avt_show_text_cursor (AVT_TRUE);
 
-      if (avt_get_key (&ch))
+      if (avt_get_key (&ch) != AVT_NORMAL)
         break;
 
       switch (ch)
 	{
-	case 8:
-	case 127:
+	case AVT_KEY_ENTER:
+	  break;
+
+	case AVT_KEY_BACKSPACE:
+	case AVT_KEY_DELETE:
+	case AVT_KEY_LEFT:
 	  if (len > 0)
 	    {
 	      len--;
-	      s[len] = L'\0';
 
 	      /* delete cursor and one char */
 	      avt_show_text_cursor (AVT_FALSE);
@@ -4278,17 +4295,19 @@ avt_ask (wchar_t * s, const int size)
 	    (*avt_alert_func) ();
 	  break;
 
-	case 13:
-	  break;
+        case AVT_KEY_RIGHT:
+          ch = s[len];
+          /* no break */
 
 	default:
-	  if ((ch >= 32) && (len < maxlen))
+	  /* 0xF000-0xF8FF reserved for function keys */
+	  if ((len < maxlen) && (ch >= 32)
+	      && ((ch < 0xF000) || (ch > 0xF8FF)))
 	    {
 	      /* delete cursor */
 	      avt_show_text_cursor (AVT_FALSE);
 	      s[len] = ch;
 	      len++;
-	      s[len] = L'\0';
 	      avt_drawchar (ch, screen);
 	      avt_showchar ();
 	      cursor.x =
@@ -4299,6 +4318,8 @@ avt_ask (wchar_t * s, const int size)
 	}
     }
   while ((ch != 13) && (_avt_STATUS == AVT_NORMAL));
+
+  s[len] = L'\0';
 
   /* delete cursor */
   avt_show_text_cursor (AVT_FALSE);
